--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -14,3 +14,14 @@
     color: aliceblue;
     padding-top: 10px;
 }
+
+.logout, .new-post{
+    float: right;
+    color: aliceblue;
+    padding-top: 10px;
+}
+
+.logout:hover, .new-post:hover{
+  color: aliceblue;
+  text-decoration: none;
+}
