--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,8 +4,12 @@
             <div class="col-md-6">
                 <h1><a href="" class="title">Spring Blog</a></h1>
             </div>
-            <div class="col-md-6">
-                <a href="/login" class="login btn btn-primary">Login</a>
+            <div class="col-md-3" *ngIf="authService.isAuthenticated()">
+                <a href="/add-post" class="new-post btn btn-default">Add Post</a>
+                <button class="logout btn btn-default" (click)="logout()">Logout</button>
+            </div>
+            <div class="col-md-3" *ngIf="!authService.isAuthenticated()">
+                <a href="/login" class="login btn btn-default">Login</a>
                 <a href="/register" class="register btn btn-default">Register</a>
             </div>
         </div>
